--- a/templates/home.html
+++ b/templates/home.html
@@ -2,8 +2,9 @@
 <html>
     <head>
         <meta charset="utf-8">
-
-        <title>The Countries I Travelled</title>
+        {% block head %}
+        <title>{% block title %}{% endblock %} The Countries I Travelled</title>
+        {% endlblock %}
         <link rel="stylesheet" type="text/css" href="/../static/temporary.css">
     </head>
 
@@ -21,26 +22,12 @@
         </nav>
 
         <main>
-            
+            {% block content %}
+            {% endblock content%}
         </main>
+
+            {% include 'footer.html' %}
 
     </body>
 
-</html>
-
-
-
-
-
-
-<head>
-        <title>Cocoa Website</title>
-</head>
-<body>
-{% if name %}
-        <p>Hello {{ name }}.</p>
-{% else %}
-        <p>Hello stranger.</p>
-{% endif %}
-</body>
 </html>
