first working version

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,6 +1,6 @@
 {% extends 'home.html' %}
-{% block title %}About - The countries I travelled{% endblock title %}
+{% block title %}Contact - The countries I travelled{% endblock title %}
 
 {% block content %}
-    <!-- |Text -->
+    <p>Contact me.</p>
 {% endblock content %}
