second working version
added sorting by continent, pics, json data for testing, css improvements

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html  id="my-whole-page">
+<html>
     <head>
         <meta charset="utf-8">
         {% block head %}
@@ -15,11 +15,11 @@
                     <div  id="my-main-header"><h1 class="is-size-1 has-text-centered">The Countries I Travelled</h1></div>
                 </header>
 
-                <nav class="navbar columns is-multiline is-mobile has-text-centered has-background-grey-lighter">
-                    <a class="navbar-item column is-one-quorter" href="/about">About</a>
-                    <a class="navbar-item column is-one-half" href="/countries">
+                <nav class="navbar columns is-multiline is-mobile has-text-centered" id="my-main-navbar">
+                    <a class="navbar-item column is-one-quorter" href="/about" id="my-main-navbar">About</a>
+                    <a class="navbar-item column is-one-half" href="/countries" id="my-main-navbar">
                         <img src="/../static/img/logo.png" width="50em" heigth="50em">Countries</a>
-                    <a class="navbar-item column is-one-quorter" href="/contact">Contact</a>
+                    <a class="navbar-item column is-one-quorter" href="/contact" id="my-main-navbar">Contact</a>
                 </nav>
 
                 <main>
