final working version

--- a/templates/about.html
+++ b/templates/about.html
@@ -2,5 +2,7 @@
 {% block title %}About - The countries I travelled{% endblock title %}
 
 {% block content %}
-    <p>I am just about.</p>
+    <h2 class="is-size-5">About</h2>
+    <p>This website is about countires I travelled. It lists some basic info about the countries.</p>
+    
 {% endblock content %}
