--- a/templates/contact.html
+++ b/templates/contact.html
@@ -2,5 +2,5 @@
 {% block title %}Contact - The countries I travelled{% endblock title %}
 
 {% block content %}
-    <p>Contact me.</p>
+    <p>Contact me at 40175139@live.napier.ac.uk.</p>
 {% endblock content %}
