--- a/templates/error.html
+++ b/templates/error.html
@@ -2,5 +2,5 @@
 {% block title %}Error - The countries I travelled{% endblock title %}
 
 {% block content %}
-    <p>I am an error.</p>
+    <p>I am a 404 error. Better luck next time :)</p>
 {% endblock content %}
