--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,3 +1,8 @@
-<footer>
+<footer class="footer">
+    <div class="content has-text-centered"
+    <span class="icon">
+            <i class="fas fa-globe-africa"></i>
+    </span>
     <p>©Copyright 2018 by Silvia Balogova. All right reserved.</p>
+    </div>
 </footer>
