--- a/templates/about.html
+++ b/templates/about.html
@@ -2,7 +2,11 @@
 {% block title %}About - The countries I travelled{% endblock title %}
 
 {% block content %}
-    <h2 class="is-size-5">About</h2>
+<div class="my-main-content">
+    <h2 class="is-size-5 my-header">About</h2>
     <p>This website is about countires I travelled. It lists some basic info about the countries.</p>
-    
+    <figure class="my-main-content">
+            <img id="image-map" src="/../static/img/map.png" alt="orange map of the world">
+    </figure>
+</div>
 {% endblock content %}
