--- a/templates/contact.html
+++ b/templates/contact.html
@@ -2,5 +2,12 @@
 {% block title %}Contact - The countries I travelled{% endblock title %}
 
 {% block content %}
+<div class="my-main-content">
+    <h2 class="is-size-5 my-header">Contact me</h2>
+    <p>Thanks for visiting!</p>
     <p>Contact me at 40175139@live.napier.ac.uk.</p>
+    <figure>
+            <img id="image-me" src="/../static/img/me.jpg" alt="woman with tea plantations behind">
+    </figure>
+</div>
 {% endblock content %}
