--- a/templates/home.html
+++ b/templates/home.html
@@ -10,20 +10,19 @@
     </head>
 
     <body>
-        <div class="column">
-            <div class="column is-8 is-offset-2 has-background-white-bis">
-                <header>
-                    <div  id="my-main-header">
-                        <h1 class="is-size-1 has-text-centered">The Countries I Travelled</h1>
-                    </div>
-                </header>
+        <div>
+            <div class="column is-8 is-offset-2">
+                    <header>
+                        <div id="my-main-header">
+                            <h1 class="is-size-1 has-text-centered">The Countries I Travelled</h1>
+                        </div>
+                    </header>
 
-                <nav class="navbar columns is-multiline is-mobile has-text-centered" id="my-main-navbar">
-                    <a class="navbar-item column is-one-quorter" href="/about" id="my-main-navbar">About</a>
-                    <a class="navbar-item column is-one-half" href="/countries" id="my-main-navbar">Countries</a>
-                    <a class="navbar-item column is-one-quorter" href="/contact" id="my-main-navbar">Contact</a>
-                </nav>
-
+                    <nav class="navbar columns is-multiline is-mobile has-text-centered" id="my-main-navbar">
+                        <a class="navbar-item column is-one-quorter" href="/about" id="my-main-navbar">About</a>
+                        <a class="navbar-item column is-one-half" href="/countries" id="my-main-navbar">Countries</a>
+                        <a class="navbar-item column is-one-quorter" href="/contact" id="my-main-navbar">Contact</a>
+                    </nav>
                 <main>
                     {% block content %}
                     {% endblock content%}
